--- a/sales.html
+++ b/sales.html
@@ -13,8 +13,8 @@
 <body>
     <header></header>
     <main>
-        <section id="sales">
-        </section>
+        <div id="sales">
+        </div>
     </main>
     <footer></footer>
     <script src="./app.js"></script>
