add style to the page

--- a/index.html
+++ b/index.html
@@ -13,16 +13,45 @@
 <body>
     <header>
         <h2>Welcome to pat's Salmon Cookies!</h2>
+        <p class="open_hours">welcome to our shop we are opining from 6:00 am to 6pm</p>
     </header>
-    <main><img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png"
-            alt="logo salmon photo"></main>
-    <div>
-        <a href="sales.html">Sales Data !</a>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
-    </div>
-    <footer>
-        <h3 style="color:#72faa6"><sup>&copy</sup>; Emad Qandalaft</h3>
-    </footer>
+    <main>
+        <div>
+            <a href="sales.html" title="go to sales page">Sales Data !</a>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+        </div>
+        <div class="branch">
+            <p>our branches</p>
+            <ul>
+                <li>Seattle</li>
+                <li>Tokyo</li>
+                <li>Dubai</li>
+                <li>Paris</li>
+                <li>Lima</li>
+
+
+            </ul>
+        </div>
+        <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png"
+            alt="logo salmon photo">
+        <img src="https://github.com/LTUC/amman-201d34/blob/master/class-08/lab-b/assets/cutter.jpeg?raw=true"
+            alt="cutter">
+        <img src="https://github.com/LTUC/amman-201d34/blob/master/class-08/lab-b/assets/family.jpg?raw=true"
+            alt="family">
+        <img src="https://github.com/LTUC/amman-201d34/blob/master/class-08/lab-b/assets/fish.jpg?raw=true" alt="fishs">
+        <img src="https://github.com/LTUC/amman-201d34/blob/master/class-08/lab-b/assets/frosted-cookie.jpg?raw=true"
+            alt="fish Cookies">
+        <img src="https://github.com/LTUC/amman-201d34/blob/master/class-08/lab-b/assets/chinook.jpg?raw=true"
+            alt="salmon2">
+        <img src="https://github.com/LTUC/amman-201d34/blob/master/class-08/lab-b/assets/shirt.jpg?raw=true"
+            alt="fish T-shirt">
+
+    </main>
+
     <script src="./app.js"></script>
+
 </body>
+<footer>
+    <h3 style="color:#72faa6"><sup>&copy;</sup> Emad Qandalaft</h3>
+</footer>
 
 </html>
