--- a/sales.html
+++ b/sales.html
@@ -11,12 +11,22 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="./index.html" title="back to home page">Home</a>
+            <hr>
+
+        </nav>
+    </header>
     <main>
         <div id="sales">
+
+
         </div>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
     <script src="./app.js"></script>
 </body>
 
