--- a/sales.html
+++ b/sales.html
@@ -19,10 +19,42 @@
         </nav>
     </header>
     <main>
+        <fieldset>
+            <form id="insertLine">
+                <div>
+                    <label for="min">type the min</label>
+                    <input type="text" name="min" id="min" placeholder="Exp.1">
+                </div>
+                <br>
+                <div>
+                    <label for="max">type the mix</label>
+                    <input type="text" name="max" id="password" placeholder="Exp.10">
+                </div>
+                <br>
+
+                <div>
+                    <label for="location">add Location</label>
+                    <input type="text" id="location" placeholder="Exp.India">
+                </div>
+                <hr>
+                <div>
+                    <input type="submit" value="send data">
+                </div>
+                <br>
+                <div>
+                    <input type="reset" value="clear data">
+                </div>
+                <br>
+
+
+            </form>
+
+        </fieldset>
         <div id="sales">
 
 
         </div>
+
     </main>
     <footer>
 
