--- a/sales.html
+++ b/sales.html
@@ -23,12 +23,17 @@
             <form id="insertLine">
                 <div>
                     <label for="min">type the min</label>
-                    <input type="text" name="min" id="min" placeholder="Exp.1">
+                    <input type="number" name="min" id="min" placeholder="Exp.1">
                 </div>
                 <br>
                 <div>
-                    <label for="max">type the mix</label>
-                    <input type="text" name="max" id="password" placeholder="Exp.10">
+                    <label for="max">type the max</label>
+                    <input type="number" name="max" id="max" placeholder="Exp.10">
+                </div>
+                <br>
+                <div>
+                    <label for="avg">type the avg</label>
+                    <input type="number" name="avg" id="avg" placeholder="Exp.2.1">
                 </div>
                 <br>
 
